Estrutura básica e estilo da view

--- a/src/app/credito/components/credito/credito.component.html
+++ b/src/app/credito/components/credito/credito.component.html
@@ -1,1 +1,21 @@
-<p>credito works!</p>
+<section class="credito">
+    <div class="info">
+        <h1>Atividade blablabla</h1>
+    </div>
+    <div class="func">
+        <div>
+            <h3>Credito Atual</h3>
+        </div>
+        <div>
+            <input readonly type="text" id="credito">
+        </div>
+        <div class="deb">
+            <button>Debitar</button>
+        </div>
+        <div class="option">
+            <button>R$1</button>
+            <button>R$10</button>
+            <button>R$100</button>
+        </div>
+    </div>
+</section>
