--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+button{
+    height: 40px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    font-weight: bolder;
 }
