--- a/src/app/credito/components/credito/credito.component.html
+++ b/src/app/credito/components/credito/credito.component.html
@@ -1,19 +1,27 @@
-<section class="credito">
-    <div class="info">
-        <h1>Atividade blablabla</h1>
+<section class="menu">
+    <nav>
+        <h2>Angular Project</h2>
+        <div>
+            <span>Click me!</span>
+        </div>
+    </nav>
+</section>
+<section class="info">
+    <div class="text">
+        <h3>Projeto de crédito</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic bla bla bla cent no nubank me contrata sz </p>
     </div>
-    <div class="func">
-        <div>
-            <h3>Credito Atual</h3>
+    <div class="img">
+        <!-- aqui fica o background -->
+    </div>
+    <div class="cell">
+        <div class="title">
+            <img src="../../../../assets/svgIcon.svg" alt="icon">
+            <span>Olá, User</span>
         </div>
-        <div>
-            <input 
-            readonly 
-            type="text" 
-            id="credito"
-            [value]="getCredito">
-        </div>
-        <div class="deb">
+        <div class="modal">
+            <label for="credito">Crédito atual</label>
+            <input readonly type="text" id="credito" [value]="getCredito">
             <button (click)="credita(-1)">Debitar</button>
         </div>
         <div class="option">
