--- a/src/app/credito/components/credito/credito.component.css
+++ b/src/app/credito/components/credito/credito.component.css
@@ -1,67 +1,172 @@
-section.credito{
+/* MENU */
+section.menu{
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 100vh auto;
-}
+    grid-template-rows: 10vh;
 
-.info{
-    grid-column: 2/3;
-    grid-row: 1/2;
 }
-.func{
-    background-image: linear-gradient(
-        to bottom,
-        #993399,
-         #662266
-    );
-    grid-column: 1/2;
+nav{
     grid-row: 1/2;
-    padding: 50px;
+    grid-column: 1/3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
 }
-h3{
-    color: white;
-    text-align: center;
-    font-size: 35px;
-}
-.func div{
-    margin: 10px;
-}
-input{
-    outline: none;
-    border-radius: 10px;
-    border: none;
-    width: 100%;
-    height: 45px;
-    background: rgba(0,0,0,0.1);
+nav > div{
+    width: 220px;
+    height: 100%;
+    background: #993399;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 15px;
 }
-.deb button{
-    width: 100%;
-    background-image: linear-gradient(
-        to bottom,
-         #22992c,
-         #1d7e25
-    );
-    color: #FFF;
-    font-size: 20px; 
+nav > div span{
+    color: white;
+    font-weight: bold;
+    font-size: 35px;
 }
 
-.option{
+h2{
+    font-size: 35px;
+    margin-left: 75px;
+    color: #993399;
+    font-weight: 500;
+}
+
+/* APLICAÇÃO */
+section.info{
+    display: grid;
+    grid-template-columns: 1fr 4fr 4fr 1fr; 
+    grid-template-rows: 70vh 10vh 10vh; 
+
+    overflow: hidden;
+}
+
+div.img{
+    background-image: url(../../../../assets/svgBackground.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+    grid-column: 2/4;
+    grid-row: 1/2; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+div.text{
+    grid-column: 2/3;
+    grid-row: 1/3; 
+
+    margin: 8vh;
+    z-index: 9999;
+}
+
+div.text h3{
+    color: #FFF;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+div.text p{
+    color: #BEBEBE;
+    font-size: 25px;
+}
+
+div.cell{
+    display: flex;
+    flex-direction: column;
+    padding: 45px;
+
+    margin-top: 8vh;
+    margin-left: 30vh;
+    width: 50%;
+    height: 90%;
+
+    background-image:url(../../../../assets/svgCell.svg);
+    background-size: 100%; 
+    background-repeat: no-repeat; 
+
+    grid-column: 3/4;
+    grid-row: 1/4; 
+}
+
+div.title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 50px;
+    margin-bottom: 15px;
+}
+
+div.title span{
+    margin-left: 5px; 
+
+    color: #FFF;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+div.modal{
+    background: white;
+    border-radius: 5px;
+    padding: 45px 15px;
+    height: 250px;
+}
+
+div.modal label{
+    font-size: 17px;
+    font-weight: bolder;
+
+    color: #993399;
+}
+
+div.modal input{
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0;
+
+    border: none;   
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.08);
+
+    text-align: right;
+    font-weight: bold;
+    font-size: 20px;
+    color: #777777;
+}
+
+
+div.modal button{
+    width: 100%;
+
+    background: transparent;
+    border: 2px solid #993399;
+    border-radius: 5px;
+
+    font-size: 20px;
+    font-weight: bold;
+    color: #993399;
+}
+div.option{
     display: flex;
     flex-direction: row;
-    align-content: space-between;
+
 }
-.option button{
+div.option button{
     width: 100%;
-    margin: 15px;
-    background:  #993399;
+    margin: 15px 5px;
+    height: 75px;
+
+    background: #802180;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
     color: #FFF;
-    box-shadow: rgba(0,0,0,0.2) 1px 1px 15px;
 }
 
-.option button:hover{
-    transition: 0.1s;
-    transform: scale(1.2);
+div.option button:hover{
+    transform: scale(0.9);
+    transition: 0.2s;
 }
