Adicionando alerta no Click Me

--- a/src/app/credito/components/credito/credito.component.html
+++ b/src/app/credito/components/credito/credito.component.html
@@ -1,7 +1,7 @@
 <section class="menu">
     <nav>
         <h2>Angular Project</h2>
-        <div>
+        <div (click)="aviso()">
             <span>Click me!</span>
         </div>
     </nav>
@@ -17,7 +17,7 @@
     <div class="cell">
         <div class="title">
             <img src="../../../../assets/svgIcon.svg" alt="icon">
-            <span>Olá, User</span>
+            <span>Olá, User!</span>
         </div>
         <div class="modal">
             <label for="credito">Crédito atual</label>
