--- a/src/app/credito/components/credito/credito.component.css
+++ b/src/app/credito/components/credito/credito.component.css
@@ -97,7 +97,7 @@ div.title{
     align-items: center;
     justify-content: center;
 
-    margin-top: 50px;
+    margin-top: 25px;
     margin-bottom: 15px;
 }
 
@@ -158,7 +158,7 @@ div.option{
 div.option button{
     width: 100%;
     margin: 15px 5px;
-    height: 75px;
+    height: 100%;
 
     background: #802180;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
